--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,11 @@
 Package: rephys
 Type: Package
-Title: What the package does (short line)
+Title: Analyse electrophysiological data
 Version: 1.0
 Date: 2015-04-15
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
+Author: Martin Rüßler
+Maintainer: Martin Rüßler <martin.ruessler@uni-bielefeld.de>
+Description: This is a collection of functions to help analyse electrophysiological data.
 License: What license is it under?
+Depends: R (>= 3.1.0), parallel, plyr
+Encoding: UTF-8
