--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,6 @@ Date: 2015-04-15
 Author: Martin Rüßler
 Maintainer: Martin Rüßler <martin.ruessler@uni-bielefeld.de>
 Description: This is a collection of functions to help analyse electrophysiological data.
-License: What license is it under?
-Depends: R (>= 3.1.0), parallel, plyr
+License: GPL-2
+Depends: R (>= 3.1.0), parallel, plyr, signal
 Encoding: UTF-8
