Finished the function prune.spikes. Naming follows a different convention here. I am not yet sure which one to follow.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(create_png_overview)
 export(plot_quickmatrix)
+export(prune.spikes)
 export(readmetadata)
 export(readstimdata)
 export(startanalysis)
