Implemented the spike pruning in C++ via the Rcpp package. It is now a lot faster than before.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,11 @@ S3method(plot,quickmatrix)
 S3method(plot,raster)
 export(autoanalysis)
 export(prune.spikes)
+export(prunespikes)
 export(read.metadata)
 export(read.stimdata)
 export(threshold.spikes)
 export(timer)
 export(zero.range)
+importFrom(Rcpp,sourceCpp)
+useDynLib(rephys)
