--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Maintainer: Martin Rüßler <martin.ruessler@uni-bielefeld.de>
 Description: This is a collection of functions to help analyse electrophysiological data.
 License: GPL-2
 Depends: R (>= 3.1.0), parallel, plyr, signal
-Imports: parallel, signal
+Imports: parallel, Rcpp (>= 0.11.6), signal
+LinkingTo: Rcpp
 Encoding: UTF-8
 Suggests: testthat,
     knitr
