Unearthed the old plotting function and renamed it to plot.spikes(). The old plot.spikes() function is now called plot.spiketrain(). I also modified the stimulus plotting function in order to be more flexible.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(plot,isipsth)
 S3method(plot,png.overview)
 S3method(plot,quickmatrix)
 S3method(plot,raster)
+S3method(plot,spikes)
 export(autoanalysis)
 export(prune.spikes)
 export(prunespikes)
