--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(plot,quickmatrix)
 S3method(plot,raster)
 S3method(plot,spikes)
 export(autoanalysis)
+export(get.psth)
 export(prune.spikes)
 export(prunespikes)
 export(read.metadata)
