Corrected merging errors.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,17 @@ S3method(plot,png.overview)
 S3method(plot,quickmatrix)
 S3method(plot,raster)
 S3method(plot,spikes)
+S3method(plot,spiketrain)
+S3method(plot,stimulus)
+S3method(plot,trial)
+S3method(sort,data)
+S3method(split,spikes)
+export(analyse.spikes)
 export(autoanalysis)
+export(batch.spikes)
+export(create_png_overview)
+export(filter_gauss)
+export(get.H1signal)
 export(get.isipsth)
 export(get.psth)
 export(prune.spikes)
@@ -15,6 +25,7 @@ export(read.metadata)
 export(read.stimdata)
 export(threshold.spikes)
 export(timer)
+export(vplayout)
 export(zero.range)
 importFrom(Rcpp,sourceCpp)
 useDynLib(rephys)
